<resources>
    <string name="app_name">eyeballmaze</string>
    <string name="maze_level">Maze 1</string>
    <string name="time_00_00">Time: 00:00</string>
    <string name="moves_0">Moves: 0</string>
    <string name="goal_0_1">Goal: 0/1</string>
    <string name="select_a_tile_to_make_a_move">Select a tile to make a move</string>
    <string name="elapsed_time_text">Time: %s</string>
    <string name="you_are_already_here">You are already here</string>
    <string name="moves">"Moves: %d"</string>
    <string name="goal_0">Goal: 0/%d</string>
    <string name="goal">"Goal: "</string>
    <string name="sound">Sound</string>
    <string name="undo">Undo</string>
    <string name="pause">Pause</string>
    <string name="rules">Rules</string>
    <string name="game_over">Game Over</string>
</resources>