<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_sound"
        android:icon="@drawable/sound_icon_selector"
        android:title="@string/sound" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/icon_undo"
        android:title="@string/undo" />

    <item
        android:id="@+id/action_pause"
        android:icon="@drawable/icon_pause"
        android:title="@string/pause" />

    <item
        android:id="@+id/action_rules"
        android:icon="@drawable/icon_rules"
        android:title="@string/rules" />
</menu>